--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ url: "https://banggeunho.github.io/"
 github:
   username: banggeunho # change to your github username
 
-# twitter:
-#   username: twitter_username # change to your twitter username
+twitter:
+  username:  # change to your twitter username
 
 social:
   # Change to your full name.
@@ -52,9 +52,7 @@ google_site_verification: google_meta_tag_verification # fill in to your verific
 
 google_analytics:
   id: "G-M777TD5DVB"
-  pv:
-    proxy_endpoint: # fill in the Google Analytics superProxy endpoint of Google App Engine
-    cache_path: # the local PV cache data, friendly to visitors from GFW region
+  
 
 # Prefer color scheme setting.
 #
@@ -74,10 +72,10 @@ theme_mode: # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-# img_cdn: "https://chirpy-img.netlify.app"
+img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "assets/img/giyomi_gh.jpg"
+avatar: "/assets/img/giyomi_gh.jpg"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
