--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -39,6 +39,9 @@ jobs:
         id: pages
         uses: actions/configure-pages@v3
 
+      - name: Setup Node
+        uses: actions/setup-node@v3
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -55,6 +58,9 @@ jobs:
           bundle exec htmlproofer _site \
             \-\-disable-external=true \
             \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
+
+      - name: Build Assets
+        run: npm i && npm run build
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v1
