deploy script 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: "CI"
 on:
   push:
     branches-ignore:
-      - "production"
+      - "master"
       - "docs"
     paths-ignore:
       - ".github/**"
